--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.10",
+        "maatwebsite/excel": "^3.1",
+        "phpoffice/phpspreadsheet": "^1.26",
         "spatie/laravel-permission": "^5.5",
         "wireui/wireui": "^1.0"
     },
